# Bergama

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  PROJECT.md  README.md  ROADMAP.md
apps/api/: .env.example  .gitignore  .secrets.example  README.md  pyproject.toml
apps/api/app/: __init__.py  factory.py  lifespan.py  main.py
apps/api/app/api/: __init__.py  health.py  router.py
apps/api/app/application/: __init__.py
apps/api/app/auth/: __init__.py  errors.py
apps/api/app/broker/: __init__.py  audit.py  capabilities.py  errors.py  hashing.py  identity.py  lifecycle.py  metadata.py  metrics.py  models.py  outcomes.py  paper_adapter.py  ports.py  reference.py
apps/api/app/config/: settings.py
apps/api/app/core/: __init__.py  backfill_settings.py  benzinga_settings.py  broker_settings.py  clock.py  config.py  container.py  data_quality_settings.py  deps.py  environment.py  exception_handlers.py  finnhub_settings.py  fred_settings.py  iceberg_writer_settings.py  kafka_settings.py  lifespan.py  log_context.py  logging.py  orchestrator_settings.py  order_settings.py  polygon_settings.py  portfolio_settings.py  providers.py  registry_settings.py  replay_settings.py  risk_settings.py  sec_settings.py  secrets.py  security.py  strategy_sdk_settings.py  strategy_settings.py
apps/api/app/domain/: __init__.py
apps/api/app/events/: __init__.py  envelope.py  errors.py  ports.py  retry.py  serialization.py  topics.py  worker.py
apps/api/app/health/: __init__.py  (+4 more)
apps/api/tests/: conftest.py  test_health.py  test_openapi.py
(+633 files in other folders)
